css/custom.css
*, html {
  box-sizing: border-box;
}

* {
  border-radius: 0 !important;
}


body {
  font-family: 'Lato', sans-serif;
}

.navbar  {
  padding: 0;
  width: 100%;
  position: relative;
}

button {
  position: relative;
}

.navbar-toggler {
  border: none;
  font-weight: bolder;
  color: #757575;
}


.navbar-brand {
  position: absolute;
  left: 13%;

}

a.navbar-brand span {
  padding: 3%;
}

.pacific {
  color: #a5a5a5;
}

i {
  color: #a5a5a5;
  padding: 3%;
}

.jumbotron-fluid, .container-fluid {
  width: 100%;
  padding: 0;
  margin: 0;
  background: transparent;
  position: relative;
}

.jumbo-img {
  margin: 2%;
  padding-right: 5%;
  width: 100%;
  height: 100%;
  position: relative;
}

.caption {
  position: absolute;
  bottom: 7%;
  left: 5%;

}

#main-caption p {
  font-size: 2em;
  color: white;
  font-weight: bold;
  padding: 4%;
  background: linear-gradient(to right, rgba(165, 165, 165, 0.9), rgba(165, 165, 165, 0.1));
  border-radius: 15px;
  margin-right: 2%;
  line-height: 1.25em;
}

#header {
  border: none;
  padding: 10% 5% 10% 5%;
}

.row {
  margin: 5% 2%;
}

.col-6 {
  box-shadow: 15px 2px 30px #888888;
}

#img-red, #img-brick, #img-snowydrive, #img-bridge{
  margin: 0;
  padding: 5%;
  width: 100%;
  height: 100%;
  border-right: none;
  /*display: inline-block;*/
}

#text-red, #text-brick, #text-snowydrive, #text-bridge {
  margin: 0;
  padding-right: 1%;
  width: 100%;
  /*display: inline-block;*/
  border-left: none;
}


.card {
  border: none;
  background: white;
  /*min-height: 100%;
  margin: 5%;*/
}

.card-img-top {
  width: 100%;
}

#falls-caption p {
  font-size: 2em;
  color: white;
  font-weight: bold;
  padding: 4%;
  background: linear-gradient(to right, rgba(165, 165, 165, 0.2), rgba(165, 165, 165, 0));
  border-radius: 15px;
  margin-right: 2%;
  line-height: 1.25em;
}

#main-footer {
  color: white;
  font-size: 20px;
}

